--- a/public/views/polls/index.html
+++ b/public/views/polls/index.html
@@ -7,11 +7,10 @@
 
 
 <body>
-	<ul ng-controller="PollsCtrl">
-		<li ng-repeat="poll in polls">{{poll.title}}</li>
-	</ul>
+	<div ng-view></div>
 
 	<script src="/angular.min.js"></script>
+	<script src="/angular-route.min.js"></script>
 	<script src="/controllers/pollsController.js"></script>
 </body>
 </html>
