Add poll creation page

--- a/public/views/polls/index.html
+++ b/public/views/polls/index.html
@@ -7,6 +7,10 @@
 
 
 <body>
+	<a href="#/all">All polls</a>
+	<a href="#/owned">Owned polls</a>
+	<a href="#/create">New poll</a>
+
 	<div ng-view></div>
 
 	<script src="/angular.min.js"></script>
